@@ -1,0 +1,19 @@
+2<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+  <head>
+    <title>Form Test Two</title>
+  </head>
+
+  <body>
+   <:include test2.pyinc:>
+
+
+
+    <hr>
+    <address><a href="mailto:smulloni@smullbola.smullyan.org"></a></address>
+<!-- Created: Mon Nov 18 17:50:01 EST 2002 -->
+<!-- hhmts start -->
+Last modified: Mon Nov 18 17:50:31 EST 2002
+<!-- hhmts end -->
+  </body>
+</html>
